# MADS-ML-Vincent

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/0_baseline/: 00_Vectorisation and Broadcasting.ipynb  02_classes_and_functions.ipynb  03_knowledge_baseline_test.ipynb
notebooks/0_baseline/elfarol/: solution.py
notebooks/1_pytorch_intro/: 06_exercises.ipynb
notebooks/3_recurrent_networks/: 04_excercise.ipynb
notebooks/5_attention/: 08_excercise.ipynb
notebooks/6_unsupervised/src/: autoencoder.py  query_embeddings.py  show_vae.py  vae_embeddings.py
ray_results/: ch4_flowers_grid_results.csv  ch4_flowers_search_results.csv  ch4_flowers_skipgrid_results.csv
reports/: README.md
reports/ch1/: main.tex
reports/ch2/: main.tex
reports/ch3/: main.tex
reports/ch4/: main.tex
src/: analysis.py  ch3_analysis.py  data.py  tune.py
src/models/: __init__.py  cnn.py  config.py
